# Jotun-Engine

./: .gitignore  ClassHierarchyDocumentation  Doxyfile  Jotun Engine.sln  RendererDocumentation.html
CoreServices/: Component.h  Core.cpp  Core.h  CoreServices.cpp  CoreServices.vcxproj  CoreServices.vcxproj.filters  CoreServicesDLL.h  Engine.cpp  Engine.h  IRenderSystem.cpp  IRenderSystem.h  IScene.cpp  IScene.h  ISceneLoader.cpp  ISceneLoader.h  ISubsystem.cpp  ISubsystem.h  JsonUtils.h  ReadMe.txt  SampleScene.json  SceneFileLoader.cpp  SceneFileLoader.h  SceneLoader.cpp  SceneLoader.h  Time.cpp  Time.h  Transform.cpp  Transform.h  TransformScene.cpp  TransformScene.h  stdafx.h
Jotun Engine/: CMakeLists.txt  CYamlParser.cpp  CYamlParser.h  Component.cpp  Component.h  Core.h  Engine.cpp  Engine.h  IPhysicsSystem.cpp  IPhysicsSystem.h  IRenderSystem.h  IScene.cpp  IScene.h  ISceneLoader.cpp  ISceneLoader.h  ISubsystem.h  Jotun Engine.vcxproj  Jotun Engine.vcxproj.filters  JsonUtils.cpp  JsonUtils.h  Logger.cpp  Logger.h  README.txt  RRenderLoader.h  Render.h  RenderData.h  RenderableMeshScene.cpp  RenderableMeshScene.h  RenderableScene.cpp  RenderableScene.h  SampleScene.json  SceneFileLoader.cpp  SceneFileLoader.h  Time.cpp  Time.h  Transform.cpp  Transform.h  TransformScene.cpp  TransformScene.h  component_loader.cpp  (+35 more)
Jotun Engine/res/shd/: basic_pbr.frag  pbr_lighting.frag  static.vert
ReflectionGen/: ReadMe.txt  ReflectionGen.cpp  ReflectionGen.vcxproj  ReflectionGen.vcxproj.filters  stdafx.cpp  stdafx.h
docs/html/: _camera_8cpp_source.html  (+290 more)
(+35 files in other folders)
